# MyAutoGrad

./: .gitignore  README.md  computational_graph  draw.py  loss_graph  playground.py  pyproject.toml  value.py
.github/workflows/: ci.yml
src/myautograd/: extra_tools.py
tests/: test_grad.py
