[project]
name = "myautograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
]
